--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.datasource.url=jdbc:mysql://172.16.0.30/ppja11_FastFurious?createDatabase
 spring.datasource.username=ppja11
 spring.datasource.password=ppja11
 
-spring.jpa.show-sql=True
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
